**************
RECENT CHANGES
**************

======
1.79.0
======

* Added --all option to config:delete command
* Added --magerun-script option to config:get command

======
1.78.4
======

* Fixed config merging of project specific configs
* Fix for issue #202 (by David Alger)

======
1.79.0
======

* Added new option "config-script" to "config:get" command

======
1.78.3
======

* Added Magento CE 1.8.0.0 as installer source
* Fixed issue #222 (by Marc Harding)

======
1.78.2
======

* Fixed broken db:drop command

======
1.78.1
======

* Fixed Issue #219 - db:import with no arguments throws PHP Warnings
* Support "~" in --root-path option
* sys:setup:run - Better error printing
* Check edition for enterprise only commands. Hide in Magento CE.
* Updated 3rt party dependencies

-----------------------------------------
SEE FULL CHANGELOG: http://bit.ly/10IDU1H
-----------------------------------------

Visit our new blog http://magerun.net